--- a/views/index.html
+++ b/views/index.html
@@ -1,17 +1,114 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nothing goes here</title>
+    <title>Give your Kodi a voice!</title>
     <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style type="text/css">
+      @keyframes spinner {
+        to {transform: rotate(360deg);}
+      }
+      body {
+        padding: 30px 39px 39px 39px;
+      }
+
+      .spinner:before {
+        content: '';
+        box-sizing: border-box;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 20px;
+        height: 20px;
+        margin-top: -10px;
+        margin-left: -10px;
+        border-radius: 50%;
+        border-top: 2px solid #07d;
+        border-right: 2px solid transparent;
+        animation: spinner .6s linear infinite;
+      }
+
+      .output {
+        font-family: Consolas, monaco, monospace;
+        white-space: pre;
+        margin-top: 4vh;
+      }
+    </style>
   </head>
-  <body>
-    <header>
-      <h1>
-        Hello world
-      </h1>
-    </header>
+  <body class="pure-u-1-3">
+    <h1>
+      Your relay from IFTTT to your Kodi at home is up and running.
+    </h1>
+    <p>
+      Here you can test if the connection between this relay can actually reach your Kodi at home from the internet. If successful you also can try out all the other routes here too.
+    </p>
+    <form class="pure-form pure-form-stacked">
+      <fieldset>
+        <label for="token">
+          <b>Your configured access token:</b>
+        </label>
+        <input name="token" id="token" type="text"
+          class="pure-input-1-2" placeholder="mandatory" />
+
+        <label for="token">
+          <b>The functionality you would like to test:</b>
+        </label>
+        <input name="route" id="route" type="text"
+          value="/koditestconnection" class="pure-input-1" />
+      </fieldset>
+      <button id="testButton" type="button" class="pure-button pure-button-primary">
+        Test connection to kodi!
+      </button>
+    </form>
+    <div id="output" class="output"></div>
   </body>
+  <script>
+    const postAjax = (success, error) => {
+
+        let xhr = window.XMLHttpRequest ? new XMLHttpRequest() : new ActiveXObject('Microsoft.XMLHTTP');
+        let body = document.querySelector('body');
+        let token = document.querySelector('#token').value;
+        let route = document.querySelector('#route').value;
+        let output = document.querySelector('#output');
+
+        body.classList.add('spinner');
+        output.innerHTML = `Executing request: ${route}\r\n\r\n`;
+
+        xhr.open('POST', route);
+        xhr.onreadystatechange = () => {
+            if (xhr.readyState <= 3) {
+                return; // pending
+            }
+            if (xhr.status === 200) {
+                success(xhr.responseText);
+            } else {
+                error(xhr.responseText);
+            }
+        };
+        xhr.setRequestHeader('Content-Type', 'application/json');
+        xhr.setRequestHeader('Accept', 'text/plain');
+        xhr.send(JSON.stringify({ token: token }));
+    };
+
+    const displayResponse = (data) => {
+        console.log('resp');
+        let output = document.querySelector('#output');
+        let body = document.querySelector('body');
+
+        output.innerHTML += data;
+        body.classList.remove('spinner');
+    };
+
+    document.addEventListener('DOMContentLoaded', () => {
+        let testButton = document.querySelector('#testButton');
+
+        testButton.addEventListener(
+          'click', () => postAjax(displayResponse, displayResponse)
+        );
+    });
+  </script>
 </html>
